--- a/Code_Llama_32k.ipynb
+++ b/Code_Llama_32k.ipynb
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "1Z8vPjGZrap7",
         "outputId": "4abb8916-1b53-4f40-b2d1-3e390da27486",
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "referenced_widgets": [
@@ -521,7 +521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -566,7 +566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -612,7 +612,7 @@
         "B_INST, E_INST = \"[INST]\", \"[/INST]\"\n",
         "B_SYS, E_SYS = \"<<SYS>>\\n\", \"\\n<</SYS>>\\n\\n\"\n",
         "\n",
-        "system_prompt=\"You are a helpful assistant. You are an expert on summarisation.\"\n",
+        "system_prompt=\"You are a helpful assistant and an expert on summarisation. You provide accurate summaries of the information provided and don't make things up.\"\n",
         "\n",
         "# Define a stream *without* function calling capabilities\n",
         "def stream(user_prompt):\n",
